prevent line height shift when button appears

--- a/catch-of-the-day/src/css/style.styl
+++ b/catch-of-the-day/src/css/style.styl
@@ -127,7 +127,6 @@ ul.order
     button
       border 0
       display none
-      line-height 1
       padding 0
     &.total
       font-weight 600
